--- a/src/Components/MapComponent.css
+++ b/src/Components/MapComponent.css
@@ -3,6 +3,10 @@
 body,
 #root,
 .leaflet-container {
+    margin: 0;
+    padding: 0;
+    position: relative;
     height: 100vh;
     width: 100vw;
+    overflow: hidden;
 }
