--- a/src/Components/MapComponent.css
+++ b/src/Components/MapComponent.css
@@ -1,12 +1,20 @@
 @import url("~leaflet/dist/leaflet.css");
 
-body,
-#root,
 .leaflet-container {
     margin: 0;
     padding: 0;
     position: relative;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     overflow: hidden;
+}
+
+.map-container {
+    width: 50%;
+    min-width: 320px;
+    height: 50%;
+    margin: 15px;
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 0px 0px 10px 10px rgba(34, 60, 80, 0.2);
 }
