--- a/src/Components/FavoriteStops.css
+++ b/src/Components/FavoriteStops.css
@@ -4,15 +4,16 @@ aside {
 
 .favorite-stops {
     flex: 1 1 100%;
-    
+    max-height: 95%;
+    overflow-y: scroll;
 }
 
 .favorite-stops__header {
-    background-color: #665d5d;
-    color: antiquewhite;
-    border-radius: 4px;
+    background-color: #3b3b3b;
+    color: #ebebeb;
+    border-radius: 10px;
     font-weight: 600;
-    font-size: 25px;
+    font-size: 30px;
     margin: 10px;
     padding: 10px;
     height: 50px;
@@ -20,4 +21,39 @@ aside {
     justify-content: center;
     align-items: center;
     text-transform: uppercase;
+}
+
+.favorite-stops__item{
+    border-radius: 10px;
+    padding: 10px;
+    margin: 25px 10px;
+    background-color: #e4e4e4;
+    box-shadow: 0px 0px 5px 5px rgba(34, 60, 80, 0.2);
+    display: flex;
+    flex-direction: column;
+}
+
+.favorite-stops__item button {
+    margin: 5px;
+    background: none;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 600;
+}
+
+.favorite-stops__item button:hover {
+    color: rgb(151, 15, 15);
+    transition-duration: 500ms;
+}
+
+.favorite-stops__item-name {
+    font-style: italic;
+    margin: 10px 0px;
+}
+
+@media (max-width: 900px) {
+    .favorite-stops {
+        max-height: 600px;
+        overflow-y: scroll;
+    }
 }
