--- a/src/Components/MapComponent.css
+++ b/src/Components/MapComponent.css
@@ -12,9 +12,16 @@
 .map-container {
     width: 50%;
     min-width: 320px;
-    height: 50%;
+    height: 95%;
     margin: 15px;
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0px 0px 10px 10px rgba(34, 60, 80, 0.2);
+}
+
+@media (max-width: 900px) {
+    .map-container {
+        width: 100%;
+        height: 300px;
+    }
 }
